--- a/assets/css/showcase.css
+++ b/assets/css/showcase.css
@@ -1,9 +1,27 @@
 .fine-line {
     border:  1px solid grey;
+    width: 250px;
+
+    margin: 5px;
+}
+
+
+
+.fine-line td {
+    text-align: center;
+
 }
 
 li.extra-wide {
 
      width: 300px;
 
+}
+
+.job {
+    padding-bottom: 40px;
+}
+
+.job-title {
+    font-weight: bold;
 }
